--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
